--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "gsap": "^3.12.2",
-    "three": "^0.157.0"
+    "three": "^0.157.0",
+    "three-addons": "^1.2.0"
   }
 }
